--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -18,12 +18,17 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@master
       - run: echo 'dockerizing...'
       - run: echo 'registry push'
+      
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - run: echo 'deploying...'
-  
+    
