--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -9,24 +9,26 @@ on:
 permissions:
   contents: read
   pull-requests: read
+  id-token: write
 
 concurrency:
   group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
   cancel-in-progress: true
 
-env:
-  GCP_KEY: ${{ secrets.GCP_KEY }}
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "$env.GCP_KEY" |  cat > ./key.json
-      - run: cat ./key.json | docker login -u _json_key --password-stdin asia-northeast3-docker.pkg.dev
       - name: Checkout
         uses: actions/checkout@master
         with:
           ref: 'project2'
+      - name: Login to GCR
+        uses: docker/login-action@v3
+        with:
+          registry: gcr.io
+          username: __json_key
+          password: ${{ secrets.GCP_KEY }}
       - name: Docker build
         run: docker build . -t asia-northeast3-docker.pkg.dev/mlops-project-417801/docker/mlops-app
       - name: Docker push
