--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -32,10 +32,10 @@ jobs:
       - run: |
           cd 2_nlp_model_serving/mlops-app
           ls -l
-      - name: Docker build
-        run: docker build . -t asia-northeast3-docker.pkg.dev/mlops-project-417801/docker/mlops-app
-      - name: Docker push
-        run: docker push asia-northeast3-docker.pkg.dev/mlops-project-417801/docker/mlops-app
+      - name: Docker build and push
+        run: |
+          docker build -t asia-northeast3-docker.pkg.dev/mlops-project-417801/docker/mlops-app
+          docker push asia-northeast3-docker.pkg.dev/mlops-project-417801/docker/mlops-app
       
   deploy:
     runs-on: ubuntu-latest
