--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -18,6 +18,8 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env: 
+      working-dir: ./2_nlp_model_serving/mlops-app
     steps:
       - name: Checkout
         uses: actions/checkout@master
@@ -29,14 +31,13 @@ jobs:
           registry: asia-northeast3-docker.pkg.dev
           username: _json_key
           password: ${{ secrets.GCP_KEY }}
-      - run: |
-          cd 2_nlp_model_serving/mlops-app
-          ls -l
       - name: Docker build and push
         run: |
           docker build -t asia-northeast3-docker.pkg.dev/mlops-project-417801/docker/mlops-app
+          
           docker push asia-northeast3-docker.pkg.dev/mlops-project-417801/docker/mlops-app
-      
+        working-directory: ${{ env.working-dir }}
+  
   deploy:
     runs-on: ubuntu-latest
     needs: build
